--- a/04-Ansible Playbooks/02-conditional statements/using import and include/install_multiple_pkgs_with_import_and_include.yaml
+++ b/04-Ansible Playbooks/02-conditional statements/using import and include/install_multiple_pkgs_with_import_and_include.yaml
@@ -1,7 +1,7 @@
 ---
   - name: Simple play to install multiple pkgs
     hosts: web_servers
-    gather-FACTS: true
+    gather-facts: true
     become: yes
     tasks:
       - import_tasks: install_webserver_RedHat.yml
