--- a/04-Ansible Playbooks/02-conditional statements/using import and include/install_multiple_pkgs_with_import_and_include.yaml
+++ b/04-Ansible Playbooks/02-conditional statements/using import and include/install_multiple_pkgs_with_import_and_include.yaml
@@ -1,12 +1,12 @@
 ---
   - name: Simple play to install multiple pkgs
     hosts: web_servers
-    gather-facts: true
+    gather_facts: true
     become: yes
     tasks:
       - import_tasks: install_webserver_RedHat.yml
         when: ansible_os_family=="RedHat"
-      - import_taKS: intall_webserver_Debian.yml
+      - import_tasks: intall_webserver_Debian.yml
         when: ansible_os_family=="Debian"
       - include_tasks: install_java_RedHat.yml
         when: ansible_os_family=="RedHat"
